Add Skills, Experience

--- a/index.html
+++ b/index.html
@@ -1,63 +1,177 @@
 <!DOCTYPE html>
 <html lang="en">
-
-<head>
-    <meta charset="UTF-8">
+  <head>
+    <meta charset="UTF-8" />
     <title>Nguyen Thanh Long</title>
-    <link rel="stylesheet" href="css/style.css">
-    <link rel="preconnect" href="https://fonts.gstatic.com">
-    <link href="https://fonts.googleapis.com/css2?family=Lato:wght@300&family=Source+Sans+Pro&display=swap"
-        rel="stylesheet">
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/css/bootstrap.min.css"
-        integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css">
-</head>
+    <link rel="stylesheet" href="css/style.css" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Lato:wght@300&family=Source+Sans+Pro&display=swap"
+      rel="stylesheet"
+    />
+    <link
+      rel="stylesheet"
+      href="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/css/bootstrap.min.css"
+      integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm"
+      crossorigin="anonymous"
+    />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css"
+    />
+  </head>
 
-<body>
+  <body>
     <div class="aboutme">
-        <div class="main-screen">
-            <div class="top">
-                <div class="avatar">
-                    <img src="img/avatar.jpg" alt="">
-                </div>
-            </div>
-            <div class="middle">
-                <h1>NGUYEN THANH LONG</h1>
-                <p>quis blandit turpis cursus in hac habitasse platea dictumst quisque sagittis purus sit amet volutpat
-                    consequat mauris nunc congue nisi vitae suscipit tellus mauris a diam maecenas sed enim ut sem
-                    viverra aliquet eget sit amet tellus </p>
-            </div>
-            <div class="bottom">
-                <div class="skill">
-                    <ul>
-                        <li><a class="menu-item" href="" data-link="introduce">INTRODUCE</a></li>
-                        <li><a class="menu-item" href="" data-link="skills">SKILLS</a></li>
-                        <li><a class="menu-item" href="" data-link="experience">EXPERIENCE</a></li>
-                        <li><a class="menu-item" href="" data-link="education">EDUCATION</a></li>
-                    </ul>
-                </div>
-            </div>
+      <div class="main-screen">
+        <div class="top">
+          <div class="avatar">
+            <img src="img/avatar.jpg" alt="" />
+          </div>
         </div>
-        <div class="main-content">
-            <div id="introduce" class="content-details">
-                <div class="exit">
-                    <p class="line-one"></p>
-                    <p class="line-two"></p>
-                </div>
-                <h1 class="header">INTRODUCE</h1>
-                <p>Adipiscing magna sed dolor elit. Praesent eleifend dignissim arcu, at eleifend sapien imperdiet ac.
-                    Aliquam erat volutpat. Praesent urna nisi, fringila lorem et vehicula lacinia quam. Integer
-                    sollicitudin mauris nec lorem luctus ultrices.</p>
-                <p>Nullam et orci eu lorem consequat tincidunt vivamus et sagittis libero. Mauris aliquet magna magna
-                    sed nunc rhoncus pharetra. Pellentesque condimentum sem. In efficitur ligula tate urna. Maecenas
-                    laoreet massa vel lacinia pellentesque lorem ipsum dolor. Nullam et orci eu lorem consequat
-                    tincidunt. Vivamus et sagittis libero. Mauris aliquet magna magna sed nunc rhoncus amet feugiat
-                    tempus.</p>
-            </div>
+        <div class="middle">
+          <h1>NGUYEN THANH LONG</h1>
+          <p>
+            quis blandit turpis cursus in hac habitasse platea dictumst quisque
+            sagittis purus sit amet volutpat consequat mauris nunc congue nisi
+            vitae suscipit tellus mauris a diam maecenas sed enim ut sem viverra
+            aliquet eget sit amet tellus
+          </p>
         </div>
+        <div class="bottom">
+          <div class="skill">
+            <ul>
+              <li>
+                <a class="menu-item" href="" data-link="introduce">INTRODUCE</a>
+              </li>
+              <li>
+                <a class="menu-item" href="" data-link="skills">SKILLS</a>
+              </li>
+              <li>
+                <a class="menu-item" href="" data-link="experience"
+                  >EXPERIENCE</a
+                >
+              </li>
+              <li>
+                <a class="menu-item" href="" data-link="education">EDUCATION</a>
+              </li>
+            </ul>
+          </div>
+        </div>
+      </div>
+      <div class="main-content">
+        <div id="introduce" class="content-details">
+          <div class="exit">
+            <p class="line-one"></p>
+            <p class="line-two"></p>
+          </div>
+          <h1 class="header">INTRODUCE</h1>
+          <p>
+            Adipiscing magna sed dolor elit. Praesent eleifend dignissim arcu,
+            at eleifend sapien imperdiet ac. Aliquam erat volutpat. Praesent
+            urna nisi, fringila lorem et vehicula lacinia quam. Integer
+            sollicitudin mauris nec lorem luctus ultrices.
+          </p>
+          <p>
+            Nullam et orci eu lorem consequat tincidunt vivamus et sagittis
+            libero. Mauris aliquet magna magna sed nunc rhoncus pharetra.
+            Pellentesque condimentum sem. In efficitur ligula tate urna.
+            Maecenas laoreet massa vel lacinia pellentesque lorem ipsum dolor.
+            Nullam et orci eu lorem consequat tincidunt. Vivamus et sagittis
+            libero. Mauris aliquet magna magna sed nunc rhoncus amet feugiat
+            tempus.
+          </p>
+        </div>
+        <div id="skills" class="content-details">
+          <div class="exit">
+            <p class="line-one"></p>
+            <p class="line-two"></p>
+          </div>
+          <h1 class="header">SKILLS</h1>
+          <div class="skils-img">
+            <div class="container">
+              <div class="row">
+                <div class="col-6">
+                  <img src="img/java-horizontal.svg" alt="" />
+                </div>
+                <div class="col-6">
+                  <img src="img/angular-ar21.svg" alt="" />
+                </div>
+              </div>
+              <div class="row">
+                <div class="col-6">
+                  <img src="img/hibernate-ar21.svg" alt="" />
+                </div>
+                <div class="col-6"><img src="img/mysql-ar21.svg" alt="" /></div>
+              </div>
+              <div class="row">
+                <div class="col-6">
+                  <img src="img/springio-ar21.svg" alt="" />
+                </div>
+                <div class="col-6">
+                  <img src="img/docker-ar21.svg" alt="" />
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+        <div id="experience" class="content-details">
+          <div class="exit">
+            <p class="line-one"></p>
+            <p class="line-two"></p>
+          </div>
+          <h1 class="header">EXPERIENCE</h1>
+          <div class="interview-group">
+            <div class="project">
+              <p><b>01/2022 – 04/2022</b></p>
+              <p><b>DATA ADAPTER SYSTEM</b></p>
+              <div class="project-description">
+                <ul>
+                  <li>Role: Developer</li>
+                  <li>Team size: 10</li>
+                  <li>Technologies: Angular, Java, Docker</li>
+                  <li>
+                    Description: Data adapter system helps users correct data in
+                    files
+                  </li>
+                </ul>
+              </div>
+            </div>
+
+            <div class="project">
+              <p><b>05/2021 – 07/2021</b></p>
+              <p><b>HOTEL MANAGEMENT WEBSITE</b></p>
+              <div class="project-description">
+                <ul>
+                  <li>Role: Developer</li>
+                  <li>Team size: 1</li>
+                  <li>Technologies: JSP, Spring MVC, Spring Data JPA</li>
+                  <li>
+                    Description: Hotel management website allows users to manage
+                    the hotel
+                  </li>
+                </ul>
+              </div>
+            </div>
+            <div class="project">
+              <p><b>11/2020 – 01/2021</b></p>
+              <p><b>E-COMMERCE WEBSITE: FASHI</b></p>
+              <div class="project-description">
+                <ul>
+                  <li>Role: Developer</li>
+                  <li>Team size: 2</li>
+                  <li>Technologies: JSP, Servlet, JDBC</li>
+                  <li>
+                    Description: E-Commerce website allows users to buy clothes
+                    and admin can manage the sale
+                  </li>
+                </ul>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
     </div>
-
-</body>
-<script src="js/main.js"></script>
-
+  </body>
+  <script src="js/main.js"></script>
 </html>
